[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CheeseAPI_Websocket"
version = "0.1.10"
description = "一款基于CheeseAPI的升级款Websocket插件。"
readme = "README.md"
authors = [
    { name = "Cheese Unknown", email = "cheese@cheese.ren" }
]
dependencies = [
    "CheeseAPI",
    "redis"
]

[project.urls]
Source = "https://github.com/CheeseUnknown/CheeseAPI_Websocket"

[tool.hatch.build.targets.sdist]
include = ["/CheeseAPI_Websocket"]
