[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "CheeseAPI_Websocket"
version = "1.0.4"
description = "一款基于CheeseAPI的升级款Websocket插件。"
readme = "README.md"
license-files = { paths = [ "LICENSE" ] }
authors = [
    { name = "Cheese Unknown", email = "cheese@cheese.ren" }
]
keywords = [ 'CheeseAPI', 'websocket' ]

dependencies = [
    "CheeseAPI==1.4.*",
    "redis"
]

[project.urls]
Source = "https://github.com/CheeseUnknown/CheeseAPI_Websocket"

[tool.hatch.build.targets.sdist]
include = [ "/CheeseAPI_Websocket" ]
